fixing overflow

--- a/public/index.css
+++ b/public/index.css
@@ -1,5 +1,7 @@
+html,
 body {
-  overflow-x: auto;
+  overflow-x: hidden;
 }
 #root {
+  overflow-x: hidden;
 }
